--- a/assets/css/style-felipe.css
+++ b/assets/css/style-felipe.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap');
 
-html {
+h1, h2, h3, h4, h5, h6, p, small {
     font-family: 'Comic Neue', cursive!important;
 }
 header {
@@ -8,9 +8,6 @@ header {
     font-family: 'Comic Neue', cursive;
 }
 
-footer {
-    background-color: rgb(174, 3, 29);
-}
 .nav-link{
     color: #ffffff;
     font-size: 1.5rem;
